--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ hr{
 }
 section{
     display: flex;
+    justify-content: space-around;
 }
 .bigSneakers img{
     width: 70%;
@@ -53,4 +54,10 @@ section{
 .smallSneakers{
     display: flex;
     width: 30%;
+}
+.flexTwo h3{
+    font-weight: 400;
+}
+.flexTwo p{
+    font-size: 15px;
 }
